@@ -1,3 +1,7 @@
+=== master
+
+* Support invalid_value_message for custom invalid value messages per-type in typecast_params plugin (jeremyevans)
+
 === 3.92.0 (2025-05-13)
 
 * Add each_part plugin, with a simpler method for using render_each with locals (jeremyevans)
